tests/miniJava/neg/005187_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] void java ) { return 0 ; } }
